--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
         <form asp-action="DisplayBmrForm">
             <div>
-                <h3>Bmr Info</h3>
+                <h3>Current Bmr</h3>
                 @Model.BmrInfo calories <br />
                 <button type="submit">Calculate Bmr</button>
             </div>
