--- a/FirebaseMVC/Views/MealPlan/Details.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Details.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
 
-<h2>Total Calories For The Week</h2>
-<p>@Model.MealPlanCurrentCalories</p>
+<h1>Calorie Tracker</h1>
+<p>@Model.MealPlanCurrentCalories calories</p>
 
 <div>
 
