--- a/FirebaseMVC/Views/Home/DisplayBmrForm.cshtml
+++ b/FirebaseMVC/Views/Home/DisplayBmrForm.cshtml
@@ -26,7 +26,7 @@
             <input asp-for="Age" class="form-control" />
           <br />
             <select asp-for="Sex" class="form-control">
-                <option value="">Select Gender</option>
+                <option value="">Select Sex</option>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
             </select>
