--- a/FirebaseMVC/Views/MealPlan/Details.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Details.cshtml
@@ -25,6 +25,6 @@
             <button type="submit">Choose Day</button>
         </form>
     </dl>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back To Meal Plan List</a>
 </div>
 
