added css to capstone

--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <div>
                 <h3>Current Bmr</h3>
                 @Model.BmrInfo calories <br />
-                <button type="submit">Calculate Bmr</button>
+                <button class="btn btn-primary" type="submit">Calculate Bmr</button>
             </div>
         </form>
 
